Fix header alignment

--- a/src/web_modules/header/index.css
+++ b/src/web_modules/header/index.css
@@ -48,7 +48,7 @@
 
 @media (min-width: 50em) {
   .Header {
-    padding: 0.5em 0;
+    padding: 9px 0 8px;
   }
 
   .Header-inner {
